# ai_chatbot

./: README.md  pyproject.toml
docs/: design.drawio
slack_ai_bot/: bot.py
slack_bot/: pyproject.toml
